implemented full text search for users and services
